# dashboard-generator

./: .gitattributes  .gitignore  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml
dashboard_engine/assets/: skeleton.html
dashboard_engine/assets/js/: evolution_widget.js  horizon_widget.js  sankey_widget.js  utils.js
output/coverage-js/: coverage-data.js
scripts/: debug_offsets.js  generate_js_coverage.js
src/dashboard_engine/: generator.py
src/dashboard_engine/assets/: skeleton.html  style.css
src/dashboard_engine/assets/js/: base_widget.js  bubble_widget.js  directed_chord_widget.js  evolution_widget.js  financial_sankey_widget.js  heatmap_widget.js  horizon_widget.js  main.js  radial_area_widget.js  ribbon_chart_widget.js  sankey_widget.js  stacked_area_widget.js  sunburst_widget.js  treemap_widget.js  utils.js
tests/: conftest.py  test_base_widget_logic.py  test_bubble_widget_integration.py  test_compressed_csv_e2e.py  test_directed_chord_widget_integration.py  test_evolution.py  test_financial_sankey_integration.py  test_generator_bundle_and_compression.py  test_generator_helpers.py  test_generator_optimization.py  test_heatmap_widget_integration.py  test_nested_treemap_integration.py  test_radial_area_widget_integration.py  test_ribbon_chart_integration.py  test_sankey.py  test_stacked_area_integration.py  test_sunburst_integration.py
