[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dashboard_engine"
version = "0.1.0"
authors = [{name = "Gregory Libert"}]
description = "Moteur de génération de dashboards D3"
requires-python = ">=3.9"
dependencies = [
    "playwright",
    "pytest",

]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dashboard_engine = ["assets/**/*"]